Tour: fix layout on small screens

--- a/components/Tour/style.module.less
+++ b/components/Tour/style.module.less
@@ -60,6 +60,7 @@
     margin-top: .5rem;
     align-self: flex-end;
     text-align: right;
+    flex: 0 0 auto;
 }
 
 @keyframes floatSideways {
